[package]
name = "dusk-hades"
version = "0.22.0"
authors = [
  "kev <kevtheappdev@gmail.com>", "zer0 <matteo@dusk.network>",
  "Victor Lopes <victor@dusk.network>", "kr0 <c.perezbaro@gmail.com>"
]
edition = "2021"
description ="Implementation of Hades252 permutation algorithm over the Bls12-381 Scalar field."
categories = ["algorithms", "cryptography", "no-std", "wasm"]
keywords = ["cryptography", "zero-knowledge", "crypto"]
license = "MPL-2.0"
repository = "https://github.com/dusk-network/hades252"

[dependencies]
dusk-bls12_381 = { version = "0.12", default-features = false }
dusk-plonk = { version = "0.16", default-features = false, features = [ "alloc" ], optional = true }

[dev-dependencies]
rand = "0.8"
ff = {version = "0.13", default-features = false}

[profile.release]
panic = 'abort'
lto = true
incremental = false
codegen-units = 1

[features]
plonk = ["dusk-plonk"]
